# NEURA

./: .gitignore  LICENSE  README.md  data_memory.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
neura_ai/: __init__.py  audio.py  config.py  core.py  image.py
test/: main.py  robot_test.py  test_tunnel.py
