[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neura_ai"
version = "0.2.7"
description = "Assistente IA Multimodal com Memória SQLite e suporte a Visão/Voz"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "DrkCde15" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ollama",
    "Pillow",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/DrkCde15/NEURA"
"Bug Tracker" = "https://github.com/DrkCde15/NEURA/issues"

[tool.setuptools.packages.find]
include = ["neura_ai*"]