[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neura_ai"
version = "1.0"
description = "Assistente IA"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  { name = "DrkCde15" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "Pillow>=10.0.0",
    "requests>=2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/DrkCde15/NEURA"
"Bug Tracker" = "https://github.com/DrkCde15/NEURA/issues"

[tool.setuptools.packages.find]
include = ["neura_ai*"]
